sound button on ui, sound fix on mobile

--- a/Platformer/www/css/style.css
+++ b/Platformer/www/css/style.css
@@ -1,6 +1,6 @@
 body, html { 
     height:100%; 
-    background: magenta;
+    background: pink;
     margin: 0; 
     padding: 0;
     }
